[package]
name = "microbit_neopixel"
version = "0.1.0"
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
defmt-rtt = "0.4.0"
defmt = "0.3.6"
embedded-hal = "1.0.0"
embedded-alloc = "0.5.1"
microbit-common = "0.14.0"

[dependencies.microbit]
version = "0.14.0"
optional = true

[dependencies.microbit-v2]
version = "0.14.0"
optional = true

[features]
v1 = ["microbit"]
v2 = ["microbit-v2"]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
